fixed the option list shifting

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ nav{
 
 .option-log{
   float: right;
-  margin-right: 12%;
+  margin-right: 5%;
   margin-top: 50px;
 }
 
